--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/flickity.css">
     <link rel="stylesheet" href="styles/styles.css">
     
-    <title>POTUS-Data</title>
+    <title>POTUSData</title>
 </head>
 <body>
     <div class="wrap">
