Update Joe Biden

--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
                     <div class="potus-pic"></div>
                     <p>45</p>
                 </div>
+                <div id="P46" class="gallery-cell democratic">
+                    <div class="potus-pic"></div>
+                    <p>46</p>
+                </div>
             </div>
         </div>
 
