--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
+    <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/flickity.pkgd.js"></script>
     <script src="js/script.js"></script>
 </body>
